<resources>
    <string name="app_name">Game Knight</string>
    <string name="barcode_scanner_fragment_label">Barcode Scanner Fragment</string>
    <string name="game_scanned_fragment_label">Game Scanned Fragment</string>

    <string name="home">Home</string>
    <string name="game_library">Game Library</string>
    <string name="game_nights">My Game Nights</string>
    <string name="settings">Settings</string>
    <string name="menu_title">Menu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="placeholder_game_name">Game Name</string>
    <string name="placeholder_num_players">2–4 players</string>
    <string name="placeholder_play_time">30–45 mins</string>
    <string name="cd_add_game">Add Game to Library</string>

    <string name="scan_barcode">Scan Barcode</string>
    <string name="add_manually">Add Manually</string>
    <string name="title_activity_test">Test</string>

    <string name="my_phone_number">My Phone Number</string>
    <string name="my_phone_number_descrip">(So friends can invite you to game nights.)</string>
    <string name="contact_sync">Contact Sync</string>
    <string name="contact_sync_descrip">(So you can invite friends by name, not just number.)</string>
    <string name="placeholder_phone_number">(801) 555-1234</string>
    <string name="sync_contact_data">Sync Contact Data</string>
    <string name="clear_stored_contact_data">Clear Stored Contact Data</string>
    <string name="library_data">Library Data</string>
    <string name="library_data_descrip">(So you can backup and restore your game library.\nImporting will not overwrite your existing games.)</string>
    <string name="export_library">Export Game Library</string>
    <string name="import_library">Import Game Library</string>

    <string name="placeholder_game_description">The women and men of your expedition build the first two settlements. Fortunately, the land is rich in natural resources. You build roads and new settlements that eventually become cities. Will you succeed in gaining supremacy on Catan? Barter trade dominates the scene. Some resources you have in abundance, other resources are scarce. Ore for wool, brick for lumber - you trade according to what is needed for your current building projects. Proceed strategically! If you found your settlements in the right places and skillfully trade your resources, then the odds will be in your favor. But your opponents are smart too.\n\nTo begin the game, we build the game board using hexagonal terrain tiles. Catan is born - a beautiful island with mountains, pastures, hills, fields, and forests, surrounded by the sea.\n\nEach of us places two small houses on spaces where three terrain hexes meet. They are our starting settlements.\n\nAnd so it begins. I roll two dice. An “11”! Each terrain hex is marked with a die roll number. Each player who owns a settlement adjacent to a terrain hex marked with the number rolled receives a resource produced by this hex. Hills produce brick, forests produce lumber, mountains produce ore, fields produce grain, and pastures produce wool.\n\nWe use these resources to expand across Catan: we build roads and new settlements, or we upgrade our existing settlements to cities. For example, a road costs 1 brick and 1 lumber. If we do not have the necessary resources, we can acquire them by trading with our opponents.\n\nEach settlement is worth 1 victory point and each city is worth 2 victory points. If you expand cleverly, you may be the first player to reach 10 victory points and thus win the game!</string>
    <string name="players">players</string>
    <string name="mins">mins</string>
    <string name="back">back</string>
    <string name="add_game">Add Game</string>
    <string name="game_found">Game found!</string>
    <string name="close">Close</string>
    <string name="rules_unavailable">Rules Unavailable</string>
    <string name="game_rules">Game Rules</string>
    <string name="game_night_location">Game Night Location</string>
    <string name="game_night_date_time">Game Night Date/Time</string>
    <string name="game_night_assignments">Don\'t forget to bring:</string>
    <string name="upcoming_game_nights">Upcoming Game Nights</string>
    <string name="no_game_found">No game found!</string>
    <string name="try_another_barcode">Try Another Barcode</string>
    <string name="add_game_manually_button">Add Game Manually</string>
    <string name="no_results">No results!</string>
    <string name="to_game_night_friends">Next</string>
    <string name="finish_adding_game_night">Finish</string>
    <string name="invite_list">Invite List</string>
    <string name="available_games">Available Games</string>
    <string name="nothing_to_bring">Nothing to bring!</string>
    <string name="delete_game">Delete Game</string>
    <string name="available_games_tab">Available Games</string>
    <string name="invite_list_tab">Invite List</string>
    <string name="edit_game_night">Edit Game Night</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plus_sign">+</string>
    <string name="new_game_night">New Game Night</string>
    <string name="select_date">Select Date</string>
    <string name="mm_dd_yyyy">mm/dd/yyyy</string>
    <string name="select_time">Select Time</string>
    <string name="hh_mm">hh:mm</string>
    <string name="game_night_title">Game Night Title</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="duration_hours">Duration (hours)</string>
    <string name="no_one_is_invited_yet">No one is invited yet!</string>

</resources>