<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.GameScannedFragment">

    <SurfaceView
        android:id="@+id/game_scanned_surface_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:background="@color/primary" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/game_scanned_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="@color/shade"
        android:clickable="true"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24"
        app:tint="@color/white" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/result_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/game_found"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <LinearLayout
            android:id="@+id/result_linear_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical" />

        <Button
            android:id="@+id/add_game_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/shade"
            android:text="@string/add_game"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/retry_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/shade"
            android:text="@string/try_another_barcode"
            android:textColor="@color/white"
            android:visibility="invisible" />

    </LinearLayout>
</FrameLayout>