<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.GameNightActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/game_night_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        app:layout_constraintBaseline_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/game_night_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@android:color/transparent"
            android:clickable="true"
            android:outlineAmbientShadowColor="@android:color/transparent"
            android:outlineSpotShadowColor="@android:color/transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24"
            app:tint="@color/white" />

        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/game_night_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_night_title"
                android:textColor="@color/white"
                android:theme="@style/Title" />

            <TextView
                android:id="@+id/game_night_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_night_location"
                android:textColor="@color/white"
                android:theme="@style/Subtitle" />

            <TextView
                android:id="@+id/game_night_date_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_night_date_time"
                android:textColor="@color/white"
                android:theme="@style/Subtitle" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/available_games_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="@string/available_games"
        android:theme="@style/Subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_night_header" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/game_night_recycler_view"
        android:layout_width="357dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingBottom="50dp"
        app:layoutManager="GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/available_games_title"
        app:layout_constraintVertical_bias="0.0"
        app:spanCount="2"
        tools:listitem="@layout/game_card">

    </androidx.recyclerview.widget.RecyclerView>

    <ProgressBar
        android:id="@+id/progressSpinner"
        style="?android:attr/progressBarStyle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="100dp"
        android:indeterminateDrawable="@drawable/progress_dice_anim"
        android:progressDrawable="@drawable/progress_dice_anim"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/game_night_recycler_view"
        app:layout_constraintEnd_toEndOf="@id/game_night_recycler_view"
        app:layout_constraintStart_toStartOf="@id/game_night_recycler_view"
        app:layout_constraintTop_toTopOf="@id/game_night_recycler_view" />

    <Button
        android:id="@+id/invite_list_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:elevation="2dp"
        android:text="@string/invite_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>